package com.kailash.tutorial.swing.ch27.model;

public enum AgeCategory {
    child, adult, senior
}
