package com.kailash.tutorial.swing.ch27.model;

public enum EmploymentCategory {
    employed, selfEmployed, unemployed, other
}
