package com.kailash.tutorial.swing.ch27.model;

public enum Gender {
    male, female
}
